 * NullHessian
 * GumbelLambdaGamma
 * LogNormalMuErrorFactor
 * WeibullMax
 * WeibullMaxFactory
 * WeibullMaxMuSigma
 * GeneralizedExtremeValueFactory
 * Pareto
 * LeastSquaresDistributionFactory
 * ParetoFactory
 * DiscreteCompoundDistribution
 * Bonmin
 * IntersectionEvent
 * UnionEvent
 * SystemFORM
 * MultiFORM
 * JoeCopula
 * MarginalEvaluation/Gradient/Hessian
 * MarshallOlkinCopula

==== API changes ====
 * Removed deprecated specific RandomVector constructors
 * Removed deprecated HypothesisTest::Smirnov
 * Removed deprecated FittingTest::TwoSamplesKolmogorov
 * Removed deprecated LinearModel, LinearModelFactory
 * Removed deprecated HypothesisTest::(Partial|Full)Regression
 * Removed deprecated OptimizationProblem(levelFunction, levelValue) ctor
 * Removed deprecated (Linear|Quadratic)(LeastSquares|Taylor)::getResponseSurface
 * Removed deprecated VisualTest::DrawEmpiricalCDF,DrawHistogram,DrawClouds
 * Moved dot to Point::dot
 * Deprecated Weibull in favor of WeibullMin
 * Deprecated WeibullMuSigma in favor of WeibullMinMuSigma
 * Deprecated WeibullFactory in favor of WeibullMinFactory, buildAsWeibull
 * Deprecated GumbelAB
 * Deprecated GaussianNonLinearCalibration,NonLinearLeastSquaresCalibration::set,getAlgorithm
 * Added getConditionalMarginalCovariance method to KrigingResult
 * Added getConditionalMarginalVariance method to KrigingResult
 * Deprecated OptimizationAlgorithm::GetLeastSquaresAlgorithmNames
 * Added linearity features to Function
 * Added 'removeKey' method to ResourceMap
 * Removed Copula class

=== Python module ===
 * Add Domain.__contains__ operator

=== Miscellaneous ===
 * Add GeneralizedPareto location parameter

=== Bug fixes ===
 * https://github.com/openturns/openturns/milestone/4?closed=1
 * #997 (Adding minimum volume set examples)
 * #1004 (The doc for SobolSimulationAlgorithm has issues)
 * #1006 (Text drawable does not handle size)
 * #1130 (Inconsistency in FittingTest)