@@ -592,6 +592,11 @@
   <LinearModelAnalysis-Identifiers                 value_int="3"      />
   <LinearModelAlgorithm-DecompositionMethod        value_str="QR"      />
 
+  <!-- OT::LinearModelStepwiseAlgorithm parameters -->
+  <LinearModelStepwiseAlgorithm-IsForward                value_bool="true"       />
+  <LinearModelStepwiseAlgorithm-Penalty                  value_float="-1.0"      />
+  <LinearModelStepwiseAlgorithm-MaximumIterations        value_int="1000"        />
+
   <!-- OT::GeneralLinearModelAlgorithm parameters -->
   <GeneralLinearModelAlgorithm-KeepCovariance                 value_bool="true"      />
   <GeneralLinearModelAlgorithm-NormalizeData                  value_bool="false"     />
