@@ -40,6 +40,7 @@
  * JoeCopula
  * MarginalEvaluation/Gradient/Hessian
  * MarshallOlkinCopula
+ * LinearModelStepwiseAlgorithm
 
 ==== API changes ====
  * Removed deprecated specific RandomVector constructors
@@ -78,6 +79,7 @@
  * #1185 (Bug with Normal.computeMinimumLevelSet method)
  * #1190 (computeProbability clamped by Domain-SmallVolume)
  * #1202 (Sample::sort & Sample::sortAccordingToAComponent only return new Samples)
+ * #1209 (LinearModelStepwiseAlgorithm from otlm does not exist in OT)
  * #1216 (The CalibrationResult doc does not match the code)
  * #1247 (KrigingAlgorithm could not compute amplitude analytically with ProductCovarianceModel )
 
